<resources>
    <string name="app_name">app</string>
    <string name="chats">消息</string>
    <string name="desktop">桌面</string>
    <string name="discover">发现</string>
    <string name="calendar">日历</string>
    <string name="me">我</string>

    <string name="network_unavailable">网络连接不可用，请检查网络</string>
    <string name="network_time_out">网络超时，请重试</string>

    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

    <string name="user_not_exists">该用户不存在</string>
</resources>