<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_chats"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp">

            <ImageView
                android:id="@+id/iv_chats"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerHorizontal="true"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/bg_tab_chats" />

            <TextView
                android:id="@+id/tv_chats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_chats"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/chats"
                android:textColor="#353535"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tv_unread_msg_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="14dp"
                android:background="@mipmap/bg_unread"
                android:gravity="center"
                android:text="0"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_desktop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp">

            <ImageView
                android:id="@+id/iv_desktop"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerHorizontal="true"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/bg_tab_desktop" />

            <TextView
                android:id="@+id/tv_desktop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_desktop"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/desktop"
                android:textColor="#353535"
                android:textSize="11sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_discover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp">

            <ImageView
                android:id="@+id/iv_discover"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerHorizontal="true"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/bg_tab_discover" />

            <TextView
                android:id="@+id/tv_discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_discover"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/discover"
                android:textColor="#353535"
                android:textSize="11sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_calendar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp">

            <ImageView
                android:id="@+id/iv_calendar"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerHorizontal="true"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/bg_tab_calendar" />

            <TextView
                android:id="@+id/tv_calendar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_calendar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/calendar"
                android:textColor="#353535"
                android:textSize="11sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_me"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onTabClicked"
            android:padding="3dp">

            <ImageView
                android:id="@+id/iv_me"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_centerHorizontal="true"
                android:focusable="false"
                android:scaleType="centerInside"
                android:src="@drawable/bg_tab_me" />

            <TextView
                android:id="@+id/tv_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_me"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:text="@string/me"
                android:textColor="#353535"
                android:textSize="11sp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_temp"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_above="@id/ll_main"
        android:background="#d6d6d6" />

    <RelativeLayout
        android:id="@+id/rl_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/view_temp" />

</RelativeLayout>